k8s/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
  namespace: sticker-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: bot
          image: ghcr.io/jaennil/quick-stickers-tg-bot/bot:latest
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - name: config
              mountPath: /app/config.yaml
              subPath: config.yaml
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config
          secret:
            secretName: bot-config
