k8s/bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-api
  namespace: sticker-bot
  labels:
    app: api
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
