k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: sticker-bot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.ru.tuna.am
      http:
        paths:
          - path: /bot-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bot-api
                port:
                  number: 8080
